[PRMT-2710] Attempt to fix complie issue on pipeline